# pbsdata-api

./: .env.example  .gitignore  BUSINESS_PLAN.md  DEVELOPER_GUIDE.md  Dockerfile  PBS Public Data API.postman_collection.json  PBS_POCKET_SPEC.md  README.md  TIERS.md  docker-compose.yml  pbs_joined_api_spec.md  pyproject.toml  test_endpoints.sh
api/: cache.py  config.py  database.py  main.py
api/middleware/: analytics.py  auth.py  rate_limit.py  tier.py
api/routers/: amt.py  atc_codes.py  auth.py  changes.py  containers.py  copayments.py  criteria.py  dispensing_rules.py  drugs.py  extemporaneous.py  extemporaneous_ingredients.py  extemporaneous_preparations.py  extemporaneous_tariffs.py  fees.py  indications.py  item_pricing_events.py  items.py  market.py  markup_bands.py  medicines.py  organisations.py  parameters.py  prescribers.py  prescribing_texts.py  programs.py  restrictions.py  schedule_changes.py  schedules.py  shared.py  standard_formula_preparations.py  summary_of_changes.py  webhooks.py
api/services/: cache.py  search.py  webhook_sender.py
docs/: join_business_rules.md  pbs-endpoint-audit-spec.md  pbs-t3-t4-audit-approach.md
ingest/: differ.py  loader.py  normaliser.py  pbs_client.py  runner.py
migrations/: 001_initial_schema.sql  002_add_search_indexes.sql  003_expanded_endpoints.sql  004_real_schema.sql  005_real_api_alignment.sql  006_widen_varchar_columns.sql  007_missing_endpoints.sql  008_t4_materialized_tables.sql
scripts/: backfill_schedules.sh  create_api_key.py  migrate.py  run_ingest.py  start.sh
tests/: conftest.py  test_comprehensive.py  test_phase1_database.py  test_phase2_ingest.py  test_phase3_auth.py  test_phase4_api.py  test_phase5_webhooks.py  test_phase6_expanded_ingest.py  test_phase7_expanded_api.py  test_phase8_reference_data_api.py
(+21 files in other folders)
