[project]
name = "pbsdata-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache==0.12.3",
    "apscheduler>=3.11.2",
    "asyncpg==0.30.0",
    "fastapi==0.115.6",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.7.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart==0.0.20",
    "stripe==11.3.0",
    "structlog==24.4.0",
    "uvicorn==0.32.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "faker==33.1.0",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]
